--- a/src/scss/blocks/_range.scss
+++ b/src/scss/blocks/_range.scss
@@ -33,6 +33,15 @@
 
   &__text__container {
     margin-block-end: 8px;
+
+    & p {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+       transition: all 0.3s ease;
+    }
   }
 
   &__text__container span {
@@ -231,5 +240,15 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+  }
+
+  .range__text__container p {
+    overflow: visible;
+    display: block;
+    -webkit-line-clamp: unset;
+  }
+
+  .range__show{
+    display: none;
   }
 }
