--- a/src/scss/blocks/_advantages.scss
+++ b/src/scss/blocks/_advantages.scss
@@ -21,6 +21,11 @@
     display: flex;
     align-items: center;
     gap: 8px;
+
+    & img {
+      width: 32px;
+      height: 32px;
+    }
   }
 
   &__title {
